# pyright-precommit

./: .pre-commit-hooks.yaml  .tool-versions  Makefile  README.md  pyproject.toml
pyright-precommit/: __main__.py  pyright_wrapper.py
scripts/: deploy.sh  deploy_sh_output.py
